maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:4: error: not found: value NORTH
  var mem : Direction = NORTH
                        ^PledgeMaze:9: error: missing argument list for method isDirectionFree in class PledgeMaze
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `isDirectionFree _` or `isDirectionFree(_)` instead of `isDirectionFree`.
        isDirectionFree
        ^PledgeMaze:23: error: not found: value mem
  mem=getDirection
  ^PledgeMaze:26: error: not found: value mem
    setDirection(mem)
                 ^PledgeMaze:44: error: not found: value sommeAngle
    sommeAngle+=1
    ^PledgeMaze:48: error: not found: value sommeAngle
    sommeAngle+=1
    ^PledgeMaze:52: error: not found: value sommeAngle
    sommeAngle+=1
    ^PledgeMaze:56: error: not found: value sommeAngle
  sommeAngle-=1
  ^