maze.pledge.PledgeMaze.scala.code
override def run() {
  var sommeAngle = 0
  var mem : Direction = NORTH
  while (!estNord) {
		if (estFaceMur) {
      keepHandOnSideWall
      if (sommeAngle==4) {
        isDirectionFree
      }
    } else {
    	avance()
    }
  }
  while (!estSurBiscuit) {
    keepHandOnSideWall
  }
  prendBiscuit()
  setDirection(Direction.EAST)
}

def isDirectionFree(dir:Direction): Boolean = {
  mem=getDirection
  setDirection(dir)
  if (estFaceMur) {
    setDirection(mem)
    return false
  } else {
    return true
  }
}

def estNord(): Boolean = {
  if (getY==0) {
    return true
  } else {
    return false
  }
}

def keepHandOnSideWall() {
	if (estFaceMur) {
    gauche()
    sommeAngle+=1
  }
  if (estFaceMur) {
    gauche()
    sommeAngle+=1
  }
  if (estFaceMur) {
    gauche()
    sommeAngle+=1
  }
  avance()
  droite()
  sommeAngle-=1
}